<resources>
    <string name="app_name">AccessPath2020</string>
    <string name="app_slogan">Putting Sidewalks \n on the Map</string>
    <string name="uacctid_key">uacctid</string>
    <string name="user_preferences">user_preferences</string>
    <string name="email_signin_big_msg">Log In Using Your Email</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="email_add_hint">Enter your email address</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="back">Back</string>
    <string name="email_box_label">An Account Does Not Exist for this Email</string>
    <string name="incorrect_password_label">Incorrect Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_into_pathvu">Log Into pathVu</string>
    <string name="signup_text">Don’t Have an Account? Sign Up.</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="approve_photo">Approve Photo</string>
    <string name="todo">TODO</string>
    <string name="report_obstruction_step_1">Step 1 - Photograph The Obstruction</string>
    <string name="report_obstruction_header">Report An Obstruction</string>
    <string name="email_support">Email Support</string>
    <string name="return_to_settings">Return to Settings</string>
    <string name="pathvu">pathVu</string>
    <string name="send_email">Send Email</string>
    <string name="support_desc">Click the button below to send us any questions or feedback you have. Your ID number will be included in the subject.</string>
</resources>