<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainReportConfirmation">

    <View
        android:id="@+id/headerView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<ImageButton
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button_white"
        android:cropToPadding="false"
        android:onClick="back"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerView"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />-->

    <TextView
        android:id="@+id/backButtonText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/interui"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_text"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
        android:onClick="back"/>

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/report_obstruction_header"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:fontFamily="@font/interui_bold"
        app:layout_constraintBottom_toTopOf="@+id/imagePreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerView" />

    <TextView
        android:id="@+id/headerSubText"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/report_obstruction_step_1"
        android:textColor="@color/com_facebook_button_background_color_disabled"
        android:textSize="12sp"
        app:fontFamily="@font/interui_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/approvePhotoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:srcCompat="@color/clear" />

    <Button
        android:id="@+id/approvePhotoButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button_orange"
        android:fontFamily="@font/interui"
        android:text="@string/approve_photo"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="@font/interui"
        android:text="@string/retake_photo"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>