<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingSignInEmail">

    <View
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backButtonText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/interui"
        android:text="@string/back"
        android:textColor="@color/dark_blue_text"
        android:textAlignment="center"
        android:onClick="back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"/>

    <!--<ImageButton
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button_white"
        android:cropToPadding="false"
        android:onClick="back"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TextView
        android:id="@+id/backButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/interui"
        android:text="@string/back"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />-->

    <TextView
        android:id="@+id/bigMessage"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interui"
        android:text="@string/email_signin_big_msg"
        android:textColor="@color/dark_blue_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interui"
        android:text="@string/all_fields_are_required"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintStart_toStartOf="@+id/bigMessage"
        app:layout_constraintTop_toBottomOf="@+id/bigMessage" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_background"
        android:ems="10"
        android:fontFamily="@font/interui"
        android:hint="@string/email_add_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColorHint="@color/dark_blue_text"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <ImageView
        android:id="@+id/emailStatusIcon"
        android:layout_width="25dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/emailBoxLabel"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintTop_toTopOf="@+id/emailBox"
        app:srcCompat="@drawable/incorrect_icon" />

    <TextView
        android:id="@+id/emailBoxLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_box_label"
        android:textColor="@color/redSettingBorder"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/text_input_background"
        android:ems="10"
        android:fontFamily="@font/interui"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="@color/dark_blue_text"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="@color/dark_blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBoxLabel" />

    <ImageView
        android:id="@+id/passwordStatusIcon"
        android:layout_width="25dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/passwordBoxLabel"
        app:layout_constraintEnd_toEndOf="@+id/passwordBox"
        app:layout_constraintTop_toBottomOf="@+id/emailBoxLabel"
        app:srcCompat="@drawable/incorrect_icon" />

    <TextView
        android:id="@+id/passwordBoxLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_password_label"
        android:textColor="@color/redSettingBorder"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/passwordBox"
        app:layout_constraintStart_toStartOf="@+id/passwordBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

    <Button
        android:id="@+id/forgotPasswordButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interui"
        android:text="@string/forgot_your_password"
        android:textColor="@color/dark_blue_text"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:onClick="forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBoxLabel" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button_orange"
        android:fontFamily="@font/interui"
        android:text="@string/log_into_pathvu"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="logInUser"
        app:layout_constraintBottom_toTopOf="@+id/setButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logInArrow"
        android:layout_width="15dp"
        android:layout_height="47dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/setButton"
        app:layout_constraintEnd_toEndOf="@+id/setButton"
        app:layout_constraintTop_toTopOf="@+id/setButton"
        app:srcCompat="@drawable/button_arrow_big"
        tools:elevation="2dp" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="@font/interui"
        android:text="@string/signup_text"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>