<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/focusLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSettingsSupport"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/interui_bold"
        android:text="@string/email_support"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<ImageButton
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_button_white"
        android:cropToPadding="false"
        android:onClick="back"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />-->

    <TextView
        android:id="@+id/backButtonText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/interui"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_text"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
        android:onClick="back" />

    <TextView
        android:id="@+id/bigMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/interui"
        android:text="@string/pathvu"
        android:textColor="@color/button_border"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <TextView
        android:id="@+id/bigMessage2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/interui"
        android:text="@string/email_support"
        android:textColor="@color/button_border"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bigMessage" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interui"
        android:text="@string/support_desc"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bigMessage2" />

    <Button
        android:id="@+id/sendEmailButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_white"
        android:fontFamily="@font/interui"
        android:onClick="back"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button_blue"
        android:fontFamily="@font/interui"
        android:onClick="back"
        android:text="@string/return_to_settings"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>